# oosikle-app

./: .envrc  .envrc.swp  .gitignore  .taurignore  Cargo.toml  flake.nix  package.json  tauri.conf.json
egui_experiment/: Cargo.toml
egui_experiment/src/: main.rs
js-src/: index.html  list.html
js-src/default_theme/: buttons.css  styles.css
js-src/default_theme/fonts/: fonts.css
js-src/htmx/: tauri-ext.js
oosikle-bodgeri/: Cargo.toml
oosikle-bodgeri/src/: main.rs
oosikle-lib/: Cargo.toml  tauri.conf.json.nodev
oosikle-lib/js-src/: index_old.html  list.html  main.js  mainbar.html  styles_old.css
oosikle-lib/js-src/default_theme/: buttons.css
oosikle-lib/src/: lib.rs
oosikle-lib/src/db/: mod.rs
oosikle-lib/src/lua_api/: plugin.rs
oosikle-lib/src/testing_data/import_test/: thing2.md  thing3.foo.txt
oosikle-server/: Cargo.toml
oosikle-server/www/: index.html
oosikle-server/www/css/: brutal.css  layout2.css  main.css  wireframe.theme.css
oosikle-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.single  testingdb.sqlite3
oosikle-tauri/js-src/: list.html
oosikle-tauri/js-src/htmx/: credits.txt
oosikle-tauri/src/: facadefs.rs  lib.rs  main.rs
oosikle-tauri/src/db/: init_db.sql
oosikle-tauri/src/lua_api/: mod.rs
oosikle-tauri/src/testing_data/import_test/: thing.txt
oosikle-tauri/src/testing_data/lua/: sqlua_testing.luau
oosikle-tauri/src/testing_data/lua/plugins/: test.plugin.lua  videogame_basic.plugin.lua
plan/: data_model_description.md
plugins/: testfn.luau  testmod.luau
plugins/testing/display/basic/: plugin.lua
reallybadidea/: Cargo.toml  tree.txt
reallybadidea/src/: lib.rs  main.rs  wgpu_start.rs
slint-experiment/: Cargo.toml  build.rs
slint-experiment/palletes/: numerichrome-42.gpl  p0psection.gpl  pop-section.gpl  shido-cyberneon.gpl  slimep-16.gpl
slint-experiment/src/: hasher.rs  main.rs
slint-experiment/ui/: brutalbutton.slint  brutalcolors.slint  brutaldevicepanel.slint  brutallineentry.slint  brutallistoview.slint  brutalmain.slint  brutalpanel.slint  brutalplistitem.slint  brutalplistview.slint  brutalscrollbar.slint  brutalselectedplaylistview.slint  brutaltabbar.slint  brutaltable.slint  brutaltextentry.slint  brutalview_content.slint  compiled.slint  datamodel.slint  dragdrop_test.slint  hasher.slint  main.slint  minbutton.slint  plistdemo.slint  stylebutton.slint  styleglobal.slint  texturebutton.slint
src/: facadefs.rs  init_db.sql  lib.rs
src-tauri/: tauri.conf.json
src/db/: basic_testing_values.sql  init_db.sql  many_testing_values.sql  mod.rs  testing_values.sql
src/lua_api/: .sqlua_testing.lua.kate-swp  basic_testing.luau  extlib.lua  many_testing_values.sql  mod.rs  plugin.rs  plugin_dec_pre_load.lua  plugin_declare_wrapper.luau  sqlite.rs  sqlua_testing.lua  sqlua_testing.luau  testingdb.sqlite3
src/lua_api/importer/: mod.rs
src/lua_api/sqlite/: data_model_impls.rs  from_lua_defs.rs  mod.rs
src/miko/: mod.rs
src/testing_data/lua/: sqlua_testing.luau
src/testing_data/lua/plugins/: pico8.plugin.lua  simple_basic.plugin.lua  test.plugin.lua  videogame.plugin.lua  videogame_basic.plugin.lua
src/testing_data/sql/: testing_values.sql
~/: .saved_opts.json
