[package]
name = "oosikle-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oosikle_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tauri = { version = "=2.5.0", features = ["unstable", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34.0", features = ["bundled", "uuid", "rusqlite-macros", "time"] }
uuid = {version = "1.16.0", features = ["v7", "serde"] }
micromap = "0.0.17"
exemplar = "0.34.0"
proptest = "1.6.0"
hypertext = "0.6.2"
mlua = {version = "0.10.3", features = ["luau-jit", "anyhow", "serialize", "async", "send", "macros"] }
anyhow = "1.0.98"
time = {version = "=0.3.41", features = ["serde", "formatting", "parsing"]}
rust_search = "=2.1.0"

