[package]
name = "oosikle-lib"
version = "0.1.0"
description = "The Oosikle project's core logic"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34.0", features = ["bundled", "uuid", "rusqlite-macros", "time"] }
uuid = {version = "1.16.0", features = ["v4", "v7", "serde"] }
micromap = "0.0.17"
exemplar = "0.34.0"
proptest = "1.6.0"
hypertext = "0.6.2"
mlua = {version = "0.10.3", features = ["luau-jit", "anyhow", "serialize", "async", "send", "macros"] }
anyhow = "1.0.98"
time = {version = "=0.3.41", features = ["serde", "formatting", "parsing"] }
rust_search = "=2.1.0"
relative-path = { version = "2.0.1", features = ["serde"] }
relative-path-utils = "0.3.1"
zip = "4.0.0"
rayon = "1.10.0"
cityhasher = "0.1.0"
blake3 = { version = "1.8.2", features = ["mmap", "rayon", "serde"] }
base64 = "0.22.1"
pattern = "1.0.0"
fast-glob = "0.4.5"
