[package]
name = "oosikle-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oosikle_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
oosikle-lib = { path = "../oosikle-lib" }
tokio = { version = "1.44.2", features = ["full"] }
tauri = { version = "=2.5.0", features = ["unstable", "image-png"] }
tauri-plugin-opener = "2"
hypertext = "0.6.2"
