[package]
name = "slint-experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
blake3 = { version = "1.8.2", features = ["mmap", "rayon", "serde"] }
i-slint-backend-winit = "=1.12.0"
slint = {version="=1.12", features=["unstable-winit-030"]}

[build-dependencies]
slint-build = "=1.12"
