[package]
name = "slint-experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
blake3 = { version = "1.8.2", features = ["mmap", "rayon", "serde"] }
slint = {git="https://github.com/slint-ui/slint.git", features=["unstable-winit-030"], rev="749abeabe0dbdbcd0125de6f9dea2d54e9e5a293"}
i-slint-backend-winit = {git="https://github.com/slint-ui/slint.git", rev="749abeabe0dbdbcd0125de6f9dea2d54e9e5a293"}

[build-dependencies]
slint-build = {git="https://github.com/slint-ui/slint.git", rev="749abeabe0dbdbcd0125de6f9dea2d54e9e5a293"}
