[package]
name = "slint-experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
blake3 = { version = "1.8.2", features = ["mmap", "rayon", "serde"] }
slint = {git="https://github.com/slint-ui/slint.git", features=["unstable-winit-030"], rev="2c439dcfee35a845d7da537496b3a542eb9bb8da"}
i-slint-backend-winit = {git="https://github.com/slint-ui/slint.git", rev="2c439dcfee35a845d7da537496b3a542eb9bb8da"}

[build-dependencies]
slint-build = {git="https://github.com/slint-ui/slint.git", rev="2c439dcfee35a845d7da537496b3a542eb9bb8da"}
